# platform-manager

./: .gitmodules  Cargo.toml  README.md  specification.md
crates/app/: Cargo.toml
crates/app/src/: errors.rs  service.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs  models.rs
crates/core/src/actions/: deploy.rs  deploy_agent.rs  info.rs  launched_apps.rs  mod.rs
crates/grpc/: Cargo.toml
crates/grpc/src/: lib.rs  server.rs
crates/grpc/tests/: grpc_execute.rs
crates/transport/: Cargo.toml  build.rs
crates/transport/src/: lib.rs  mapper.rs
my_app/crates/app/: Cargo.toml
my_app/crates/app/src/: lib.rs
my_app/crates/cli/: Cargo.toml
my_app/crates/cli/src/: cli.rs  lib.rs
my_app/crates/core/src/: lib.rs  models.rs  registry.rs
my_app/crates/core/src/actions/: echo.rs  mod.rs
my_app/crates/grpc/src/: lib.rs
my_app/crates/grpc/tests/: grpc_execute.rs
my_app/crates/transport/: Cargo.toml  build.rs
my_app/crates/transport/src/: lib.rs
proto/: action.proto  factory.proto  info.proto  manager.proto
