[package]
name = "platform_manager_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
platform_manager_transport = { path = "../transport" }
tokio = { workspace = true }
tonic = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

