[package]
name = "platform_manager_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
platform_manager_app = { path = "../app" }
platform_manager_transport = { path = "../transport" }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["net"] }
platform_manager_core = { path = "../core" }

