[package]
name = "platform_manager_transport"
version = "0.1.0"
edition = "2021"

[dependencies]
platform_manager_core = { path = "../core" }
prost = { workspace = true }
tonic = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = "3"

