[package]
name = "my_app_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
my_app_transport = { path = "../transport" }
tokio = { workspace = true }
tonic = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
